[gd_scene load_steps=8 format=3 uid="uid://xqy0we8wikky"]

[ext_resource type="Script" uid="uid://bxsif6vw5j0ph" path="res://scenes/main/main.gd" id="1_iuonh"]
[ext_resource type="Texture2D" uid="uid://cmg1jmhxscb0y" path="res://assets/Menu Sprites/Radi-o's(4).png" id="2_6q06x"]
[ext_resource type="Script" uid="uid://d4aosn22lkjp4" path="res://scenes/multiplayer/multiplayer_lobby.gd" id="2_iuonh"]
[ext_resource type="PackedScene" uid="uid://drcry2o67hgrq" path="res://scenes/menu/menu.tscn" id="3_k2fmo"]
[ext_resource type="Script" uid="uid://bq1mcf2rug0oy" path="res://scenes/main/game.gd" id="4_l3cfh"]
[ext_resource type="Texture2D" uid="uid://dbex5haeuat3j" path="res://assets/Menu Sprites/1.png" id="5_hujxm"]
[ext_resource type="Texture2D" uid="uid://bffirqpoeqj3v" path="res://assets/Menu Sprites/Radi-o_s_2_-removebg-preview.png" id="6_ouso4"]

[node name="Main" type="Node"]
script = ExtResource("1_iuonh")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(965, 540)
scale = Vector2(2.05, 1.5)
texture = ExtResource("2_6q06x")

[node name="MultiplayerLobby" type="Node" parent="." node_paths=PackedStringArray("player_container")]
script = ExtResource("2_iuonh")
player_container = NodePath("../Players")
metadata/_custom_type_script = "uid://d4aosn22lkjp4"

[node name="Sprite Folder" type="Node" parent="."]

[node name="Logo" type="Sprite2D" parent="Sprite Folder"]
position = Vector2(478, 317)
scale = Vector2(2, 2)
texture = ExtResource("6_ouso4")

[node name="Cereal Box" type="Sprite2D" parent="Sprite Folder"]
position = Vector2(1536, 530)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_hujxm")

[node name="Menu" parent="." instance=ExtResource("3_k2fmo")]

[node name="Game" type="Node" parent="." node_paths=PackedStringArray("multiplayer_lobby")]
script = ExtResource("4_l3cfh")
multiplayer_lobby = NodePath("../MultiplayerLobby")

[node name="Players" type="Node" parent="."]

[connection signal="server_disconnected" from="MultiplayerLobby" to="." method="_on_multiplayer_lobby_server_disconnected"]
[connection signal="create_server" from="Menu" to="." method="_on_menu_create_server"]
[connection signal="join_server" from="Menu" to="." method="_on_menu_join_server"]
